--- a/src/main/resources/templates/job_info.html
+++ b/src/main/resources/templates/job_info.html
@@ -12,7 +12,7 @@
 
 <body>
 <div th:replace="~{links}"></div>
-<div th:replace="~{topbar}"></div>
+<div th:replace="~{fragments/navbar_fragment :: navbar(${loggedInUser})}"></div>
 <div th:replace="~{sidebar}"></div>
 
 <main id="main" class="main">
