--- a/src/main/resources/templates/leave_details.html
+++ b/src/main/resources/templates/leave_details.html
@@ -13,7 +13,7 @@
 <body>
 <div th:replace="~{links}"></div>
 
-<div th:replace="~{topbar}"></div>
+<div th:replace="~{fragments/navbar_fragment :: navbar(${loggedInUser.getUsername()})}"></div>
 <div th:replace="~{sidebar}"></div>
 
 <main id="main" class="main">
